# toyota-hc-2023spring

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: input.json  make_json.py
lambda-template/: Cargo.toml
solver/: Cargo.toml
solver/src/: lib.rs  main.rs
toyota2023sp/: Cargo.toml
toyota2023sp/src/: main.rs
